--- a/lipstr/lists/static/less/style.less
+++ b/lipstr/lists/static/less/style.less
@@ -136,8 +136,11 @@ header {
 
 /* ---- list ---- */
 #list-container {
-    width: 80%;
-    margin: 0 10% 0 10%;	
+    /*width: 80%;
+    margin: 0 10% 0 10%;*/	
+    width: 100%;
+    max-width: 400px;
+    margin: auto;
 }
 
 
