--- a/lipstr/lists/templates/base.html
+++ b/lipstr/lists/templates/base.html
@@ -52,6 +52,7 @@
 <script>window.jQuery || document.write('<script src="{{STATIC_URL}}js/libs/jquery-1.7.1.min.js"><\/script>')</script>
 
 <script src="{{STATIC_URL}}js/utils.js"></script>
+<script src="{{STATIC_URL}}js/ko.bindings.js"></script>
 <script src="{{STATIC_URL}}js/list.js"></script>
 
 <script>
