--- a/lipstr/lists/templates/fragments/list.html
+++ b/lipstr/lists/templates/fragments/list.html
@@ -16,13 +16,14 @@
                 </form>
             </div>
         </li>
+        <div style="clear: both; font-size: 10px; line-height: 11px;">
+        Coucoulol</div>
     </ul>
     
     <form id="add-list" data-bind="submit: function() { addTaskList($('form').children('[name=list_name]').val()); }">
             <input type="text" name="list_name" placeholder="Name of your list">
             <input class="button" type="submit" value="Add list">
     </form>
-
-
+    
 </div>
 
