changed the background

--- a/lipstr/lists/templates/base.html
+++ b/lipstr/lists/templates/base.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title>list.troebr.net</title>
+	<title>Lipstr</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<meta name="viewport" content="width=device-width">
@@ -32,6 +32,8 @@
     <script src="{{STATIC_URL}}js/libs/knockout-2.0.0.min.js"></script>
 	<script src="{{STATIC_URL}}js/libs/modernizr-2.5.3-respond-1.1.0.min.js"></script>
 	
+    <link rel="shortcut icon" href="{{STATIC_URL}}img/favicon.ico" />
+    
 </head>
 
 
