--- a/lipstr/lists/templates/home.html
+++ b/lipstr/lists/templates/home.html
@@ -1,7 +1,17 @@
 {% extends "base.html" %}
 
 {% block header %}
-<header></header>
+<header>
+    <div id="header-content">
+        <div id="logo-header"></div>
+        <nav>
+            <ul>
+                <li>Preferences</li>
+                <li>About</li>
+            </ul>
+        </nav>
+    </div>
+</header>
 
 {% endblock %}
 
