--- a/lipstr/lists/static/less/style.less
+++ b/lipstr/lists/static/less/style.less
@@ -102,11 +102,11 @@
 /* ---- Z-Indexing ----*/
 /* ---- Stylin' ---- */
 
-html, body { height: 100%; }
+html, body {}
 body{ 
 	font:12px/20px 'Open Sans', Helvetica, Helvetica Neue, Arial;
 	/*font:12px/20px RobotoRegular, Helvetica, Helvetica Neue, Arial;*/
-    background: url(../img/bg-repeat-light.png);
+    background: url(../img/backgrounds/furley_bg.png);
 }
 p { margin: 0; }
 a { text-decoration: none; }	
@@ -115,12 +115,52 @@ ul, li {margin: 0; padding: 0;}
 li { list-style-type: none;}
 
 header {
-    background-image: url(../img/logo-small.png);
-	margin: 1em auto 1em auto;
-	background-repeat: no-repeat;
-	background-position: center;
-    height: 51px;
+    background-image: url(../img/header-bg-highlight.png);
+	background-repeat: repeat-x;
+	background-position: 0 14px;
+    height: 36px;
+    width: 100%;
+    background-color: @blue;
+    position: fixed;
+    top: 0;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 3px;
+    border-bottom: 1px solid @blueborder;
     
+    #header-content {
+        width: 100%;
+        height: 100%;
+        max-width: 640px;
+        margin: 0 auto;
+        
+        nav { float: right; height: 100%; }
+        ul { 
+            height: 100%;        
+        }
+        li { 
+            display: inline-block;
+            color: #36687a;
+            text-shadow: 0px 1px 0px @highlight;
+            font-size: 13px;
+            margin-top: 0 5px 0 5px;
+            padding: 13px 0.5em 0 0.5em;
+            height: 20px;
+            
+            &:hover {
+                background-color: #75c5e1;
+            }
+        }
+        
+    }
+    
+    #logo-header {
+        width: 141px;
+        height: 100%;
+        background-image: url('../img/logo-header.png');
+        background-repeat: no-repeat;
+        background-position: 0 1px;
+        cursor: pointer;
+        float: left;
+    }
 }
 
 /* --- login ---- */
@@ -292,11 +332,9 @@ header {
 
 /* ---- list ---- */
 #list-container {
-    /*width: 80%;
-    margin: 0 10% 0 10%;*/	
     width: 100%;
     max-width: 400px;
-    margin: auto;
+    margin: 60px auto 0 auto;
 }
 
 
