--- a/lipstr/lists/templates/login.html
+++ b/lipstr/lists/templates/login.html
@@ -3,6 +3,7 @@
 {% block custom-css-files %}
 
 <style>
+html, body { height: 100%; }
 body {
     background-color: #60b9da;
     background-image: url('{{STATIC_URL}}img/login-bg-gradient.png');
