--- a/lipstr/lists/static/less/style.less
+++ b/lipstr/lists/static/less/style.less
@@ -115,10 +115,12 @@ ul, li {margin: 0; padding: 0;}
 li { list-style-type: none;}
 
 header {
+	@header_height: 36px;
+	
     background-image: url(../img/header-bg-highlight.png);
 	background-repeat: repeat-x;
 	background-position: 0 14px;
-    height: 36px;
+    height: @header_height;
     width: 100%;
     background-color: @blue;
     position: fixed;
@@ -132,24 +134,52 @@ header {
         max-width: 640px;
         margin: 0 auto;
         
-        nav { float: right; height: 100%; }
-        ul { 
-            height: 100%;        
-        }
-        li { 
-            display: inline-block;
+        #menu {
+            @padding_triangle: 17px;
+        
+            height: 100%;
+            float: right;
+            
+            background-image: url(../img/menu-triangle.png);
+            background-repeat: no-repeat;
+            background-position: 100% 63%;
+            padding: 0 @padding_triangle 0 4px;
             color: #36687a;
             text-shadow: 0px 1px 0px @highlight;
-            font-size: 13px;
-            margin-top: 0 5px 0 5px;
-            padding: 13px 0.5em 0 0.5em;
-            height: 20px;
             
-            &:hover {
-                background-color: #75c5e1;
+            #username {
+                height: @header_height + 1;
+                line-height: 40px;
             }
-        }
-        
+            
+            #menu-dropdown {
+                display: none;
+                
+                
+                background-color: white;
+                float: right;
+                border-bottom: 1px solid #c9c9c9;
+                border-left: 1px solid #c9c9c9;
+                border-right: 1px solid #c9c9c9;
+                margin-right: -@padding_triangle;
+                box-shadow: rgba(35, 26, 26, 0.4) 0px 1px 3px -1px;
+                
+                &.active { display: block; }
+                
+                li {
+                    a { display: inline-block; padding: 2px 4px; width: 120px; color: @mediumgrey;
+                     &:hover { color: @mediumgrey; }
+                    }
+                    &:hover { background-color: #ececec; }
+                }
+            }
+
+            &:hover {
+                background-color: rgba(255, 255, 255, 0.22);
+                .transitionvalues(background-color 0.2s);
+                cursor: pointer;
+            }
+        }        
     }
     
     #logo-header {
@@ -346,6 +376,7 @@ li.list {
     .li-wrapper {
         background-color: white;
         box-shadow: hsla(0, 15%, 12%, 0.4) 0px 1px 3px 0px; 
+        
     }
     
     &:first-child {
@@ -354,19 +385,59 @@ li.list {
     }
     
     .li-header { 
+        @list-header-height: 26px;
+        
         
         font-family: 'Open Sans Condensed', sans serif;
         overflow: hidden;
         margin: 0;
         padding: 0 8px 0 0;
+        height: @list-header-height;
         
-        .li-button {
-            padding: 0 4px;
+        .li-menu {
+            /*background-image: url('../img/list-header-triangle.png');
+            background-position: center 60%;
+            background-repeat: no-repeat;*/
+            float: left;
+            height: @list-header-height;
+            width: 26px;
+            position: absolute;
+            font-size: 12px;
+            font-family: 'Open Sans', sans serif;
+            .transitionvalues(background-color 0.2s);
             
-            &:hover {
-                cursor: pointer;
-                text-decoration: underline;
+            .li-button {
+				border-left: 4px solid transparent;
+				border-right: 4px solid transparent;
+				border-top: 4px solid rgba(0,0,0, 0.35);
+				margin-left: 7px;
+				margin-top: 12px;
+				position: absolute;
+					
             }
+            &:hover {
+                cursor: pointer; 
+                background-color: rgba(255, 255, 255, 0.3);
+                .li-button { border-top: 4px solid rgba(255,255,255, 0.7);}
+            }
+            
+            ul {
+                display: none;
+                background-color: white;
+                float: left;
+                margin-top: @list-header-height;
+                border-bottom: 1px solid #c9c9c9;
+                border-left: 0px solid #c9c9c9;
+                border-right: 1px solid #c9c9c9;
+                box-shadow: rgba(35, 26, 26, 0.4) 0px 1px 3px -1px;
+                z-index: 101;
+                position: absolute;
+                
+                a { display: inline-block; padding: 2px 16px 2px 4px; width: 120px; color: @mediumgrey;
+                 &:hover { color: @mediumgrey; background-color: #ececec;}
+                }
+            }
+            
         }
         
         h2 {
@@ -412,6 +483,8 @@ li.list {
         text-align: center;
     }
 }
+
+
 
 @import "media-queries.less";
 @import "print.less";
