--- a/lipstr/lists/templates/home.html
+++ b/lipstr/lists/templates/home.html
@@ -4,12 +4,14 @@
 <header>
     <div id="header-content">
         <div id="logo-header"></div>
-        <nav>
-            <ul>
-                <li>Preferences</li>
-                <li>About</li>
+        <div id="menu">
+            <div id="username">{% if user.first_name %}{{user.first_name|capfirst}}{% else %}{{user.username}}{% endif %}</div>
+           
+            <ul id="menu-dropdown">
+                <li><a href="{% url disconnect %}">Sign out</a></li>
             </ul>
-        </nav>
+            
+        </div>
     </div>
 </header>
 
