fixed remove list caption error

--- a/lipstr/lists/templates/signup.html
+++ b/lipstr/lists/templates/signup.html
@@ -19,7 +19,7 @@
         <label for="password">Password</label>
         <input type="password" id="password" name="password">
         
-        <label for="firstname">First name (if you want)</label>
+        <label for="firstname">Display name (optional)</label>
         <input type="text" id="firstname" name="firstname">
         
         <div id="submit-wrapper"><input type="submit" value="Create account"></div>
