--- a/lipstr/lists/templates/base.html
+++ b/lipstr/lists/templates/base.html
@@ -34,6 +34,7 @@
 	
     <link rel="shortcut icon" href="{{STATIC_URL}}img/favicon.ico" />
     
+    {% include 'fragments/googleanalytics.html' %}
 </head>
 
 
