--- a/lipstr/lists/static/less/style.less
+++ b/lipstr/lists/static/less/style.less
@@ -140,29 +140,35 @@ header {
         
             height: 100%;
             float: right;
-            
-            background-image: url(../img/menu-triangle.png);
-            background-repeat: no-repeat;
-            background-position: 100% 63%;
-            padding: 0 @padding_triangle 0 4px;
             color: #36687a;
             text-shadow: 0px 1px 0px @highlight;
             
             #username {
+                float: right;
                 height: @header_height + 1;
                 line-height: 40px;
+                background-image: url(../img/menu-triangle.png);
+                background-repeat: no-repeat;
+                background-position: 100% 63%;
+                padding: 0 @padding_triangle 0 8px;
+                
+                &:hover {
+	                background-color: rgba(255, 255, 255, 0.22);
+	                .transitionvalues(background-color 0.2s);
+	                cursor: pointer;
+                }
             }
             
             #menu-dropdown {
                 display: none;
                 
-                
+                clear: left;
                 background-color: white;
-                float: right;
+                margin-top: @header_height + 1;
+                margin-right: -1px;
                 border-bottom: 1px solid #c9c9c9;
                 border-left: 1px solid #c9c9c9;
                 border-right: 1px solid #c9c9c9;
-                margin-right: -@padding_triangle;
                 box-shadow: rgba(35, 26, 26, 0.4) 0px 1px 3px -1px;
                 
                 &.active { display: block; }
@@ -173,12 +179,6 @@ header {
                     }
                     &:hover { background-color: #ececec; }
                 }
-            }
-
-            &:hover {
-                background-color: rgba(255, 255, 255, 0.22);
-                .transitionvalues(background-color 0.2s);
-                cursor: pointer;
             }
         }        
     }
