--- a/lipstr/lists/templates/base.html
+++ b/lipstr/lists/templates/base.html
@@ -55,6 +55,9 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="{{STATIC_URL}}js/libs/jquery-1.7.1.min.js"><\/script>')</script>
 
+<!-- js libs -->
+<script src="{{STATIC_URL}}js/libs/jquery.masonry.min.js"></script>
+
 <script src="{{STATIC_URL}}js/utils.js"></script>
 <script src="{{STATIC_URL}}js/ko.bindings.js"></script>
 <script src="{{STATIC_URL}}js/list.js"></script>
