--- a/lipstr/lists/static/less/style.less
+++ b/lipstr/lists/static/less/style.less
@@ -93,6 +93,7 @@
     &:active {
         .box-shadow(inset rgba(255, 255, 255, 0.5) 0px 1px 0px);
         margin-top: 2px;
+        margin-bottom: -2px;
         height: 54px;
     }
 }
@@ -132,9 +133,19 @@ header {
     #header-content {
         width: 100%;
         height: 100%;
-        max-width: 640px;
-        margin: 0 auto;
         
+        #logo-header {
+	        width: 141px;
+	        display: block;
+	        height: 100%;
+	        background-image: url('../img/logo-header.png');
+	        background-repeat: no-repeat;
+	        background-position: 0 1px;
+	        //cursor: pointer;
+	        float: left;
+	        margin-left: 20px;
+        }
+    
         #menu {
             @padding_triangle: 17px;
         
@@ -142,6 +153,7 @@ header {
             float: right;
             color: #36687a;
             text-shadow: 0px 1px 0px @highlight;
+            margin-right: 20px;
             
             #username {
                 float: right;
@@ -183,15 +195,7 @@ header {
         }        
     }
     
-    #logo-header {
-        width: 141px;
-        height: 100%;
-        background-image: url('../img/logo-header.png');
-        background-repeat: no-repeat;
-        background-position: 0 1px;
-        cursor: pointer;
-        float: left;
-    }
+
 }
 
 /* --- login ---- */
@@ -365,8 +369,8 @@ header {
 #list-container {
     width: 100%;
     /*max-width: 400px;*/
+    /*height: 300px;*/
     margin: 50px auto 0 auto;
-    height: 300px;
     
     > ul {
         margin: 0 auto;
@@ -413,9 +417,9 @@ li.list {
 				border-top: 4px solid rgba(0,0,0, 0.35);
 				margin-left: 7px;
 				margin-top: 12px;
-				position: absolute;
-					
+				position: absolute;	
             }
+            
             &:hover {
                 cursor: pointer; 
                 background-color: rgba(255, 255, 255, 0.3);
@@ -485,7 +489,19 @@ li.list {
     }
 }
 
-
+#bottom-menu {
+    width: 72px;
+	margin: 3em auto 0 auto;
+	border-radius: 11px;
+	padding: 11px;
+	text-align: center;
+	box-shadow: inset rgba(0, 0, 0, 0.2) 0px 2px 2px 0px;	
+	
+	.button3d {
+        height: 2.5em;
+        display: inline-block;	
+    }
+}
 
 @import "media-queries.less";
 @import "print.less";
