--- a/lipstr/lists/templates/base.html
+++ b/lipstr/lists/templates/base.html
@@ -57,9 +57,11 @@
 
 <!-- js libs -->
 <script src="{{STATIC_URL}}js/libs/jquery.masonry.min.js"></script>
+<script src="{{STATIC_URL}}js/libs/jquery.robertclick.js"></script>
 
 <script src="{{STATIC_URL}}js/utils.js"></script>
 <script src="{{STATIC_URL}}js/ko.bindings.js"></script>
+<script src="{{STATIC_URL}}js/listdnd.js"></script>
 <script src="{{STATIC_URL}}js/list.js"></script>
 
 <script>
