--- a/lipstr/lists/static/less/style.less
+++ b/lipstr/lists/static/less/style.less
@@ -13,12 +13,20 @@
 @mediumgrey: #4a4a4a;
 @blue: #60b9da;
 @blueborder: #5ba3bc;
-@highlight: rgba(255, 255, 255, 0.4);
+/*@highlight: rgba(255, 255, 255, 0.4); // doesn't render well in firefox */
+@highlight: #78f4ff;
 
-	.box-shadow(@values) {
+.box-shadow(@values) {
     -moz-box-shadow: @values;
     -webkit-box-shadow: @values;
     box-shadow: @values;
+}
+
+input::-webkit-input-placeholder {
+    color:    #aaa;
+}
+input:-moz-placeholder {
+    color:    #aaa;
 }
 
 .border-radius(@value) {
@@ -152,7 +160,6 @@ header {
             height: 100%;
             float: right;
             color: #36687a;
-            text-shadow: 0px 1px 0px @highlight;
             margin-right: 20px;
             
             #username {
@@ -163,6 +170,7 @@ header {
                 background-repeat: no-repeat;
                 background-position: 100% 63%;
                 padding: 0 @padding_triangle 0 8px;
+                text-shadow: 0px 1px 0px @highlight;
                 
                 &:hover {
 	                background-color: rgba(255, 255, 255, 0.22);
