added error pages

--- a/lipstr/lists/static/less/style.less
+++ b/lipstr/lists/static/less/style.less
@@ -13,8 +13,8 @@
 @mediumgrey: #4a4a4a;
 @blue: #60b9da;
 @blueborder: #5ba3bc;
-/*@highlight: rgba(255, 255, 255, 0.4); // doesn't render well in firefox */
-@highlight: #78f4ff;
+/*@highlight: rgba(255, 255, 255, 0.4); // doesn't render well in firefox - 78f4ff*/
+@highlight: #a3dded;
 
 .box-shadow(@values) {
     -moz-box-shadow: @values;
