--- a/lipstr/lists/templates/login.html
+++ b/lipstr/lists/templates/login.html
@@ -1,18 +1,4 @@
-{% extends "base.html" %}
-
-{% block custom-css-files %}
-
-<style>
-html, body { height: 100%; }
-body {
-    background-color: #60b9da;
-    background-image: url('{{STATIC_URL}}img/login-bg-gradient.png');
-    background-position: center 0px;
-    background-repeat: no-repeat;
-}   
-</style>
-
-{% endblock %}
+{% extends "layouts/blue.html" %}
 
 {% block custom-js %}
     
