--- a/lipstr/lists/templates/base.html
+++ b/lipstr/lists/templates/base.html
@@ -22,6 +22,7 @@
 	<link rel="stylesheet/less" href="{{STATIC_URL}}less/style.less">
 	<script src="{{STATIC_URL}}js/libs/less-1.2.2.min.js"></script>
 	
+    {% block custom-css %}{% endblock %}
     {% block custom-css-files %}{% endblock %}
     
 	{% comment %}<!-- Use SimpLESS (Win/Linux/Mac) or LESS.app (Mac) to compile your .less files
