--- a/lipstr/lists/templates/layouts/error.html
+++ b/lipstr/lists/templates/layouts/error.html
@@ -17,6 +17,7 @@ h1 {
     padding-right: 40px;
     border-right: 3px solid #36687A;
     margin-right: 40px;
+    width: 165px;
 }
 
 h2 {
@@ -38,7 +39,7 @@ h2 {
 
 #error-content {
     float: left;
-    margin-top: 45px;
+    margin-top: 40px;
     width: 450px;
 }
 
