--- a/lipstr/lists/templates/login.html
+++ b/lipstr/lists/templates/login.html
@@ -27,8 +27,7 @@
     </form>
     
     <div id="or-login-with">
-        <p>or login with:</p>
-       
+        <p>or sign in with <a href="{% url oauth2 %}" id="gmail-button">gmail</a></p>
     </div>
     
     <div id="you-dont-have-an-account">
